# YAVM

./: CMakeLists.txt
doc/: Classes_diagram.dia
src/: CMakeLists.txt  main.cpp
src/common/include/: Actor.hpp  Movie.hpp
src/common/src/: Actor.cpp  Movie.cpp
